Fix issue with record button not centered
Elements with display: inline-block could introduces a space between elements: https://stackoverflow.com/q/5078239

--- a/web/css/index.css
+++ b/web/css/index.css
@@ -1316,13 +1316,12 @@ body:not(.ios) .recording #background-container {
 }
 
 #record-button {
-  display: inline-block;
   border-radius: 50%;
   border: 0.6rem solid black;
   background-color: white;
   height: 2.5rem;
   width: 2.5rem;
-  margin: 1rem 0;
+  margin: 1rem auto;
   cursor: pointer;
 }
 
